--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "homepage": "https://robertjkeck2.github.io/resumeTerminal",
   "main": "reactcart.js",
   "scripts": {
+    "deploy": "npm run dist&&gh-pages -d dist",
     "test": "echo \"Error: no test specified\" && exit 1",
     "watch": "watchify -t reactify ./src/app.js -o ./build/main.min.js -v",
     "dist": "npm run remove-dist && npm run build-standalone",
@@ -21,5 +22,8 @@
     "uglify-js": "^2.4.20",
     "underscore": "^1.8.3",
     "watchify": "^3.1.0"
+  },
+  "devDependencies": {
+    "gh-pages": "^1.1.0"
   }
 }
