--- a/package.json
+++ b/package.json
@@ -3,15 +3,14 @@
   "version": "0.0.1",
   "description": "",
   "homepage": "https://robertjkeck2.github.io/resumeTerminal",
-  "main": "reactcart.js",
+  "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "watch": "watchify -t reactify ./src/app.js -o ./build/main.min.js -v",
     "dist": "npm run remove-dist && npm run build-standalone",
     "remove-dist": "rm build/*.js",
     "build-standalone": "NODE_ENV=production browserify -t reactify ./src/app.js | uglifyjs -mc > build/main.min.js"
   },
-  "author": "",
+  "author": "John Keck",
   "license": "MIT",
   "dependencies": {
     "babelify": "^5.0.4",
