--- a/package.json
+++ b/package.json
@@ -1,28 +1,18 @@
 {
   "name": "react-term",
-  "version": "0.0.1",
-  "description": "",
-  "homepage": "https://robertjkeck2.github.io/resumeTerminal",
-  "main": "reactcart.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "watch": "watchify -t reactify ./src/app.js -o ./build/main.min.js -v",
-    "dist": "npm run remove-dist && npm run build-standalone",
-    "remove-dist": "rm build/*.js",
-    "build-standalone": "NODE_ENV=production browserify -t reactify ./src/app.js | uglifyjs -mc > build/main.min.js"
-  },
-  "author": "",
-  "license": "MIT",
+  "version": "0.1.0",
+  "private": true,
   "dependencies": {
-    "babelify": "^5.0.4",
-    "browserify": "^9.0.3",
-    "react": "^0.13.1",
-    "reactify": "^1.1.0",
-    "uglify-js": "^2.4.20",
-    "underscore": "^1.8.3",
-    "watchify": "^3.1.0"
+    "npm": "^6.1.0",
+    "react": "^16.4.1",
+    "react-dom": "^16.4.1",
+    "react-router-dom": "^4.3.1",
+    "react-scripts": "1.1.4"
   },
-  "devDependencies": {
-    "gh-pages": "^1.1.0"
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject"
   }
 }
